# kaacore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE
.ci/az-pipelines/: build.yml
.github/workflows/: codeql-analysis.yml
cmake/: CMakeRC.cmake  Toolchain-Ubuntu-mingw64.cmake
demos/: CMakeLists.txt  basic.cpp  basic_scene.cpp  controllers.cpp  drawing_order.cpp  fonts.cpp  index_spatial.cpp  input.cpp  physics.cpp  polygon_tester.cpp  spatial_indexing.cpp  spatial_indexing_2.cpp  sprites.cpp  stencil.cpp  timers.cpp  transitions.cpp  window.cpp
embedded_resources/font_munro/: LICENSE.txt
include/kaacore/: audio.h  camera.h  capture.h  clock.h  config.h.in  display.h  draw_queue.h  draw_unit.h  easings.h  embedded_data.h  engine.h  exceptions.h  files.h  fonts.h  geometry.h  images.h  indexset.h  input.h  log.h  materials.h  memory.h  node_ptr.h  node_transitions.h  nodes.h  physics.h  platform.h  render_passes.h  render_targets.h  renderer.h  renderer_callbacks.h  resources.h  resources_manager.h  scene.h  scenes.h  shaders.h  shape.h  shapes.h  spatial_index.h  sprites.h  statistics.h  (+14 more)
scripts/: format.sh  lint.sh  memcheck.sh  threadcheck.sh
scripts/valgrind/: dri.supp  python.supp  third_party.supp  threading.supp
shaders/: CMakeLists.txt  compile_shaders.sh  fs_default.sc  fs_sdf_font.sc  varying.def.sc  vs_default.sc  vs_effect.sc
shaders/include/: kaa.sh
src/: CMakeLists.txt  audio.cpp  camera.cpp  capture.cpp  clock.cpp  draw_queue.cpp  draw_unit.cpp  easings.cpp  embedded_data.cpp  engine.cpp  files.cpp  fonts.cpp  geometry.cpp  images.cpp  input.cpp  log.cpp  materials.cpp  memory.cpp  node_ptr.cpp  node_transitions.cpp  nodes.cpp  physics.cpp  platform.cpp  render_passes.cpp  render_targets.cpp  renderer.cpp  renderer_callbacks.cpp  resources.cpp  resources_manager.cpp  scene.cpp  scenes.cpp  shaders.cpp  shape.cpp  shapes.cpp  spatial_index.cpp  sprites.cpp  statistics.cpp  stencil.cpp  texture_loader.cpp  textures.cpp  (+10 more)
tests/: CMakeLists.txt  basics.cpp  runner.cpp  runner.h  test_basics.cpp  test_draw_queue.cpp  test_draw_unit.cpp  test_fonts.cpp  test_geometry.cpp  test_hitboxes.cpp  test_images.cpp  test_materials.cpp  test_shapes.cpp  test_statistics.cpp  test_textures.cpp  test_transitions.cpp  test_unicode_buffer.cpp
